Fix photo-edit panel layout bug

--- a/public/sass/views/_photo-edit-panel.scss
+++ b/public/sass/views/_photo-edit-panel.scss
@@ -321,7 +321,6 @@
     border-radius: 2px;
     box-shadow: 0 7px 15px rgba(0, 0, 0, 0.2), 0 10px 20px rgba(0, 0, 0, 0.1);
     padding: 0px;
-    max-height: 640px;
     background-color: #fff;
 
     .main-content {
